--- a/S18_Https/src/app/app.component.html
+++ b/S18_Https/src/app/app.component.html
@@ -1,33 +1,18 @@
+<!-- <ngx-spinner bdColor="rgba(0, 0, 0, 0.5)" size="medium" color="#D9531E" type="ball-spin-clockwise" [fullScreen]="true">
+</ngx-spinner> -->
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
       <form #postForm="ngForm" (ngSubmit)="onCreatePost(postForm.value)">
         <div class="form-group">
           <label for="title">Title</label>
-          <input
-            type="text"
-            class="form-control"
-            id="title"
-            required
-            ngModel
-            name="title"
-          />
+          <input type="text" class="form-control" id="title" required ngModel name="title" />
         </div>
         <div class="form-group">
           <label for="content">Content</label>
-          <textarea
-            class="form-control"
-            id="content"
-            required
-            ngModel
-            name="content"
-          ></textarea>
+          <textarea class="form-control" id="content" required ngModel name="content"></textarea>
         </div>
-        <button
-          class="btn btn-primary"
-          type="submit"
-          [disabled]="!postForm.valid"
-        >
+        <button class="btn btn-primary" type="submit" [disabled]="!postForm.valid">
           Send Post
         </button>
       </form>
@@ -36,22 +21,35 @@
   <hr />
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <button class="btn btn-primary" (click)="onFetchPosts()">
+      <button class="btn btn-primary" (click)="onFetchPosts();onGetPost()">
         Fetch Posts
       </button>
       |
-      <button
-        class="btn btn-danger"
-        [disabled]="loadedPosts.length < 1"
-        (click)="onClearPosts()"
-      >
+      <button class="btn btn-danger" [disabled]="loadedPosts.length < 1" (click)="onClearPosts()">
         Clear Posts
       </button>
     </div>
   </div>
+  <div *ngIf="isFetching && !error" class="myspinner">
+    <div class="spinner-border" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
   <div class="row">
     <div class="col-xs-12 col-md-6 col-md-offset-3">
-      <p>No posts available!</p>
+      <p *ngIf="loadedPosts.length === 0; else posts">No posts available!</p>
+      <ng-template #posts>
+        <ul class="list-group" *ngFor="let post of loadedPosts">
+          <li class="list-group-item">
+            <h1>{{post.title}}</h1>
+            <p>{{post.content}}</p>
+          </li>
+        </ul>
+      </ng-template>
+      <div *ngIf="error" class="alert alert-danger">
+        <h1>Some error occurred</h1>
+        <p> {{error}} </p>
+      </div>
     </div>
   </div>
 </div>
