--- a/S20_Authentication_and_route_protection/src/app/auth/auth.component.html
+++ b/S20_Authentication_and_route_protection/src/app/auth/auth.component.html
@@ -1,18 +1,25 @@
-<div class="row">
+ <div class="row">
   <div class="col-xs-12 col-md-6 col-md-offset-3">
-    <form>
+    <div *ngIf="isLoading" style="text-align: center;">
+      <app-loading-spinner></app-loading-spinner>
+    </div>
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)" *ngIf="!isLoading">
       <div class="form-group">
         <label for="email">E-Mail</label>
-        <input type="email" id="email" class="form-control" />
+        <input type="email" id="email" class="form-control" name="email" ngModel required email />
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" class="form-control" />
+        <input type="password" id="password" class="form-control" name="password" ngModel required/>
       </div>
       <div>
-        <button class="btn btn-primary">Sign Up</button> |
-        <button class="btn btn-primary">Switch to Login</button>
+        <button id="btn" [disabled]="!form.valid"  class="btn btn-primary"> {{ isLoginMode ? 'Log In' : 'Sign Up' }}  </button> |
+        <button class="btn btn-primary" (click)="onSwitchMode()" type="button">Switch to {{ isLoginMode ?  'Sign Up' :'Log In'  }}</button>
       </div>
     </form>
+    <div *ngIf="error" class="alert alert-danger">
+      <h4>{{error}}</h4>
+    </div>
   </div>
-</div>
+</div> 
+
